--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
-version: 2
-#orbs:
-#  codecov: codecov/codecov@1.0.4
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.4
 
 defaults: &defaults
   working_directory: ~/tmp
@@ -57,7 +57,7 @@ jobs:
       - run:
           name: test
           command: npm run test -- --coverage
-#      - codecov/upload
+      - codecov/upload
       - store_artifacts:
           path: coverage
       - store_test_results:
