--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-mid",
   "version": "1.0.2",
-  "description": "",
+  "description": "node express middleware module",
   "main": "dist/main.js",
   "module": "dist/main.js",
   "sideEffects": false,
